FIXED a padding issue on the Welcome secion on mobile

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -163,7 +163,7 @@ h4 {
 
 // Welcome Section
 #welcome {
-	padding: 0 20px;
+	padding: 0 0 0 20px;
 
 	.welcome-text {
 		grid-column: 1/6;
